gateway_api_manifests/argocd/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-webpage
  namespace: argocd
spec:
  parentRefs:
    - name: traefik
      sectionName: http
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: argocd-server
        namespace: argocd
        port: 80
